lab-01/Syntax/Normal/Par.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module Syntax.Normal.Par
  ( happyError
  , myLexer
  , pProgram
  , pListExpr
  , pExpr
  ) where

import Prelude

import qualified Syntax.Normal.Abs
import Syntax.Normal.Lex

}

%name pProgram Program
%name pListExpr ListExpr
%name pExpr Expr
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '(' { PT _ (TS _ 1) }
  ')' { PT _ (TS _ 2) }
  '0' { PT _ (TS _ 3) }
  ';' { PT _ (TS _ 4) }
  'else' { PT _ (TS _ 5) }
  'false' { PT _ (TS _ 6) }
  'fun' { PT _ (TS _ 7) }
  'if' { PT _ (TS _ 8) }
  'iszero' { PT _ (TS _ 9) }
  'pred' { PT _ (TS _ 10) }
  'return' { PT _ (TS _ 11) }
  'succ' { PT _ (TS _ 12) }
  'then' { PT _ (TS _ 13) }
  'true' { PT _ (TS _ 14) }
  '{' { PT _ (TS _ 15) }
  '}' { PT _ (TS _ 16) }
  L_Ident  { PT _ (TV $$) }

%%

Ident :: { Syntax.Normal.Abs.Ident }
Ident  : L_Ident { Syntax.Normal.Abs.Ident $1 }

Program :: { Syntax.Normal.Abs.Program }
Program : ListExpr { Syntax.Normal.Abs.ProgramExprs $1 }

ListExpr :: { [Syntax.Normal.Abs.Expr] }
ListExpr : {- empty -} { [] }
         | Expr { (:[]) $1 }
         | Expr ';' ListExpr { (:) $1 $3 }

Expr :: { Syntax.Normal.Abs.Expr }
Expr : 'true' { Syntax.Normal.Abs.ConstTrue }
     | 'false' { Syntax.Normal.Abs.ConstFalse }
     | 'if' Expr 'then' Expr 'else' Expr { Syntax.Normal.Abs.If $2 $4 $6 }
     | '0' { Syntax.Normal.Abs.ConstZero }
     | 'succ' Expr { Syntax.Normal.Abs.Succ $2 }
     | 'pred' Expr { Syntax.Normal.Abs.Pred $2 }
     | 'iszero' Expr { Syntax.Normal.Abs.IsZero $2 }
     | Ident { Syntax.Normal.Abs.Var $1 }
     | 'fun' '(' Ident ')' '{' 'return' Expr '}' { Syntax.Normal.Abs.Abstraction $3 $7 }
     | Expr Expr { Syntax.Normal.Abs.Application $1 $2 }
     | '(' Expr ')' { $2 }
{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
